[gd_scene load_steps=108 format=3 uid="uid://dqctvohqrdf36"]

[ext_resource type="Script" path="res://Bermain/Level_Huruf.gd" id="1_u5h7j"]
[ext_resource type="Texture2D" uid="uid://bmavohttjowte" path="res://Assets/GUI/Math Game Assets/Backgrounds/BG1_Landscape.png" id="2_w8dcc"]
[ext_resource type="FontFile" uid="uid://cowdkyyhdjvg6" path="res://Assets/GUI/grass/Font for text/Gluten/static/Gluten-ExtraBold.ttf" id="3_f6fus"]
[ext_resource type="Script" path="res://Bermain/GUI.gd" id="3_opgsu"]
[ext_resource type="Texture2D" uid="uid://cf2xpsapq01xv" path="res://Assets/GUI/grass/Menu Buttons/Clear Menu Buttons/Grass-Buttons-arrow3.png" id="4_h8qy6"]
[ext_resource type="Texture2D" uid="uid://dtvu5wl0hqhci" path="res://Assets/GUI/grass/Menu Buttons/Clear Menu Buttons/Pressed/Buttons-pressed-arrow3.png" id="5_gk0hn"]
[ext_resource type="PackedScene" uid="uid://dmftqvrf3ev7o" path="res://Heart/heart_container.tscn" id="6_8telj"]
[ext_resource type="Theme" uid="uid://c7sd3381we7ys" path="res://themes/content_angka1.tres" id="8_j7r2o"]
[ext_resource type="FontFile" uid="uid://bn4v25tysqslj" path="res://Assets/GUI/grass/Font for text/Gluten/static/Gluten-Bold.ttf" id="9_h2173"]
[ext_resource type="Texture2D" uid="uid://cc7yqt5mlxhka" path="res://Assets/star.png" id="10_fk8jn"]
[ext_resource type="Texture2D" uid="uid://c1wgyn26h5mfu" path="res://Assets/maskot.png" id="12_co2wi"]
[ext_resource type="Texture2D" uid="uid://dxtcs4jkwuhg0" path="res://Assets/GUI/grass/Bar/panel-2.png" id="12_tlsxu"]
[ext_resource type="PackedScene" uid="uid://illc4x0ru6lv" path="res://Bermain/Content_Huruf.tscn" id="13_k4775"]
[ext_resource type="Texture2D" uid="uid://nb2t37fmak6r" path="res://Assets/ellen/frame_00_delay-0.03s.png" id="15_fk6ka"]
[ext_resource type="Texture2D" uid="uid://8v7lvoc16ne" path="res://Assets/ellen/frame_05_delay-0.03s.png" id="16_ay2rd"]
[ext_resource type="Texture2D" uid="uid://maytrof4hdjr" path="res://Assets/ellen/frame_06_delay-0.03s.png" id="17_6skei"]
[ext_resource type="Texture2D" uid="uid://dfk37dlg6bg8j" path="res://Assets/ellen/frame_07_delay-0.03s.png" id="18_7okvx"]
[ext_resource type="Texture2D" uid="uid://m3l5wpot2mvm" path="res://Assets/ellen/frame_08_delay-0.03s.png" id="19_3n7bu"]
[ext_resource type="Texture2D" uid="uid://bmeu5gp7hwv8c" path="res://Assets/ellen/frame_09_delay-0.03s.png" id="20_m2ptn"]
[ext_resource type="Texture2D" uid="uid://dp5mx262d64kj" path="res://Assets/ellen/frame_10_delay-0.03s.png" id="21_teerv"]
[ext_resource type="Texture2D" uid="uid://dlbxfgah815kc" path="res://Assets/ellen/frame_11_delay-0.03s.png" id="22_1yarx"]
[ext_resource type="Texture2D" uid="uid://111axi1jhull" path="res://Assets/ellen/frame_12_delay-0.03s.png" id="23_i23oa"]
[ext_resource type="Texture2D" uid="uid://baqbxiqmgn2ic" path="res://Assets/ellen/frame_13_delay-0.03s.png" id="24_uyy3f"]
[ext_resource type="Texture2D" uid="uid://s6ivpsbpmb6o" path="res://Assets/ellen/frame_14_delay-0.03s.png" id="25_v7ivo"]
[ext_resource type="Texture2D" uid="uid://cg3areytva2w4" path="res://Assets/ellen/frame_15_delay-0.03s.png" id="26_qmqat"]
[ext_resource type="Texture2D" uid="uid://bqg1gu5pc6s8w" path="res://Assets/ellen/frame_16_delay-0.03s.png" id="27_4k5vr"]
[ext_resource type="Texture2D" uid="uid://bl37e066bqeny" path="res://Assets/ellen/frame_17_delay-0.03s.png" id="28_4pmf6"]
[ext_resource type="Texture2D" uid="uid://dgnpykhkxp5fc" path="res://Assets/ellen/frame_18_delay-0.03s.png" id="29_l7i1d"]
[ext_resource type="Texture2D" uid="uid://cd61v471btwmw" path="res://Assets/ellen/frame_19_delay-0.03s.png" id="30_aqky3"]
[ext_resource type="Texture2D" uid="uid://64i73gpmilrq" path="res://Assets/ellen/frame_20_delay-0.03s.png" id="31_lq00s"]
[ext_resource type="Texture2D" uid="uid://dunulm3pqeuhw" path="res://Assets/ellen/frame_21_delay-0.03s.png" id="32_wda2k"]
[ext_resource type="Texture2D" uid="uid://c6o4id8f4j6qh" path="res://Assets/ellen/frame_22_delay-0.03s.png" id="33_xiwu7"]
[ext_resource type="Texture2D" uid="uid://bsodkeh0d5v4g" path="res://Assets/ellen/frame_23_delay-0.03s.png" id="34_uxibr"]
[ext_resource type="Texture2D" uid="uid://cv4ob20fmqm28" path="res://Assets/ellen/frame_24_delay-0.03s.png" id="35_bahn4"]
[ext_resource type="Texture2D" uid="uid://bbuenhbqv3b55" path="res://Assets/ellen/frame_25_delay-0.03s.png" id="36_jjdd5"]
[ext_resource type="Texture2D" uid="uid://ps6kq68i1go5" path="res://Assets/ellen/frame_26_delay-0.03s.png" id="37_tkse5"]
[ext_resource type="Texture2D" uid="uid://dtfoh58hx3hey" path="res://Assets/ellen/frame_27_delay-0.03s.png" id="38_56m6w"]
[ext_resource type="Texture2D" uid="uid://s50ce3524ho1" path="res://Assets/ellen/frame_28_delay-0.03s.png" id="39_p1v53"]
[ext_resource type="Texture2D" uid="uid://c3amh0yhrmmgl" path="res://Assets/ellen/frame_29_delay-0.03s.png" id="40_uc10o"]
[ext_resource type="Texture2D" uid="uid://u8e4f0e53ywp" path="res://Assets/ellen/frame_30_delay-0.03s.png" id="41_o6e33"]
[ext_resource type="Texture2D" uid="uid://dla3obyddib3e" path="res://Assets/ellen/frame_31_delay-0.03s.png" id="42_uklkh"]
[ext_resource type="Texture2D" uid="uid://be1wury2f15j6" path="res://Assets/ellen/frame_32_delay-0.03s.png" id="43_8pn22"]
[ext_resource type="Texture2D" uid="uid://dote8rmm0wl3n" path="res://Assets/ellen/frame_33_delay-0.03s.png" id="44_o2rty"]
[ext_resource type="Texture2D" uid="uid://cx1x5wkrgvc7x" path="res://Assets/ellen/frame_34_delay-0.03s.png" id="45_gxn5o"]
[ext_resource type="Texture2D" uid="uid://b2yb1xrg3omqg" path="res://Assets/ellen/frame_35_delay-0.03s.png" id="46_n3bbs"]
[ext_resource type="Texture2D" uid="uid://di1ayjaw3b1lm" path="res://Assets/ellen/frame_36_delay-0.03s.png" id="47_vrmgo"]
[ext_resource type="Texture2D" uid="uid://dvtrevq4024fg" path="res://Assets/ellen/frame_37_delay-0.03s.png" id="48_axb4m"]
[ext_resource type="Texture2D" uid="uid://c55ode8i7n24f" path="res://Assets/ellen/frame_38_delay-0.03s.png" id="49_cjp84"]
[ext_resource type="Texture2D" uid="uid://ck7c4g56g0yo" path="res://Assets/ellen/frame_39_delay-0.03s.png" id="50_610r4"]
[ext_resource type="Texture2D" uid="uid://tf00puvth6v6" path="res://Assets/ellen/frame_40_delay-0.03s.png" id="51_2wsbj"]
[ext_resource type="Texture2D" uid="uid://fuqcd8m7rd7b" path="res://Assets/ellen/frame_41_delay-0.03s.png" id="52_mpml3"]
[ext_resource type="Texture2D" uid="uid://dhq8gdgb1i4on" path="res://Assets/ellen/frame_42_delay-0.03s.png" id="53_2as2a"]
[ext_resource type="Texture2D" uid="uid://bxb5ngrtjf17u" path="res://Assets/ellen/frame_43_delay-0.03s.png" id="54_f2qoy"]
[ext_resource type="Texture2D" uid="uid://6y255jdlv3am" path="res://Assets/ellen/frame_44_delay-0.03s.png" id="55_pwjag"]
[ext_resource type="Texture2D" uid="uid://bs78e8310e1v4" path="res://Assets/ellen/frame_45_delay-0.03s.png" id="56_nc88k"]
[ext_resource type="Texture2D" uid="uid://dovb62phdx848" path="res://Assets/ellen/frame_46_delay-0.03s.png" id="57_30gc7"]
[ext_resource type="Texture2D" uid="uid://criu5hjq8376j" path="res://Assets/ellen/frame_47_delay-0.03s.png" id="58_bt2sq"]
[ext_resource type="Texture2D" uid="uid://b8u4mxobrvlg5" path="res://Assets/ellen/frame_48_delay-0.03s.png" id="59_ql6ph"]
[ext_resource type="Texture2D" uid="uid://cmgmtscaqffas" path="res://Assets/ellen/frame_49_delay-0.03s.png" id="60_mq6g2"]
[ext_resource type="Texture2D" uid="uid://ktkvh8861w7y" path="res://Assets/ellen/frame_50_delay-0.03s.png" id="61_sbd4q"]
[ext_resource type="Texture2D" uid="uid://88c1wtsl82qk" path="res://Assets/ellen/frame_51_delay-0.03s.png" id="62_3cben"]
[ext_resource type="Texture2D" uid="uid://cnlohx4o4tg7g" path="res://Assets/ellen/frame_52_delay-0.03s.png" id="63_yy014"]
[ext_resource type="Texture2D" uid="uid://dohrb8ljiccjm" path="res://Assets/ellen/frame_53_delay-0.03s.png" id="64_66342"]
[ext_resource type="Texture2D" uid="uid://mw2rfuonu0xb" path="res://Assets/ellen/frame_54_delay-0.03s.png" id="65_euo2g"]
[ext_resource type="Texture2D" uid="uid://ctmv7wudhehcy" path="res://Assets/ellen/frame_55_delay-0.03s.png" id="66_53cul"]
[ext_resource type="Texture2D" uid="uid://c2b1xmriwfdcj" path="res://Assets/ellen/frame_56_delay-0.03s.png" id="67_4tdu4"]
[ext_resource type="Texture2D" uid="uid://cvlnx12ys7511" path="res://Assets/ellen/frame_57_delay-0.03s.png" id="68_aerds"]
[ext_resource type="Texture2D" uid="uid://don666s7280fs" path="res://Assets/ellen/frame_58_delay-0.03s.png" id="69_qinl6"]
[ext_resource type="Texture2D" uid="uid://b5wbcfxoqte63" path="res://Assets/ellen/frame_59_delay-0.03s.png" id="70_ncbwu"]
[ext_resource type="Texture2D" uid="uid://c1xorjt1o2rld" path="res://Assets/ellen/frame_60_delay-0.03s.png" id="71_pauoj"]
[ext_resource type="Texture2D" uid="uid://co4i0yib0hw2w" path="res://Assets/ellen/frame_61_delay-0.03s.png" id="72_n8gac"]
[ext_resource type="Texture2D" uid="uid://d3fks55l468sb" path="res://Assets/ellen/frame_62_delay-0.03s.png" id="73_jgeh3"]
[ext_resource type="Texture2D" uid="uid://builrflk8um6q" path="res://Assets/ellen/frame_63_delay-0.03s.png" id="74_y8v8l"]
[ext_resource type="Texture2D" uid="uid://bgrbkdj202f51" path="res://Assets/ellen/frame_64_delay-0.03s.png" id="75_tw2wo"]
[ext_resource type="Texture2D" uid="uid://b7m8rwmugybkc" path="res://Assets/ellen/frame_65_delay-0.03s.png" id="76_nj71j"]
[ext_resource type="Texture2D" uid="uid://dpnyjgwsdp4l5" path="res://Assets/ellen/frame_66_delay-0.03s.png" id="77_uy4qy"]
[ext_resource type="Texture2D" uid="uid://c54k03pkw3roo" path="res://Assets/ellen/frame_67_delay-0.03s.png" id="78_3e6np"]
[ext_resource type="Texture2D" uid="uid://dev3kbogvokam" path="res://Assets/ellen/frame_68_delay-0.03s.png" id="79_fkd5m"]
[ext_resource type="Texture2D" uid="uid://c4n0xrt3a6kk1" path="res://Assets/ellen/frame_69_delay-0.03s.png" id="80_iq1si"]
[ext_resource type="Texture2D" uid="uid://c3jeuyqgjg4t8" path="res://Assets/ellen/frame_70_delay-0.03s.png" id="81_m3ncn"]
[ext_resource type="Texture2D" uid="uid://ck3o07u4cf2it" path="res://Assets/ellen/frame_71_delay-0.03s.png" id="82_kyfv2"]
[ext_resource type="Texture2D" uid="uid://djm2yy1smdvuw" path="res://Assets/ellen/frame_72_delay-0.03s.png" id="83_l22hs"]
[ext_resource type="Texture2D" uid="uid://by5tuclqossop" path="res://Assets/ellen/frame_73_delay-0.03s.png" id="84_5j0on"]
[ext_resource type="Texture2D" uid="uid://bnu0nib6bafep" path="res://Assets/ellen/frame_74_delay-0.03s.png" id="85_dlfvf"]
[ext_resource type="Texture2D" uid="uid://bvhirmhy2yoab" path="res://Assets/ellen/frame_75_delay-0.03s.png" id="86_bbpop"]
[ext_resource type="Texture2D" uid="uid://dapyxtlen7qyp" path="res://Assets/ellen/frame_76_delay-0.03s.png" id="87_iclsf"]
[ext_resource type="Texture2D" uid="uid://dq02pmdcodjb8" path="res://Assets/ellen/frame_77_delay-0.03s.png" id="88_hr0bg"]
[ext_resource type="Texture2D" uid="uid://hurfk0h33wq0" path="res://Assets/ellen/frame_78_delay-0.03s.png" id="89_bp51f"]
[ext_resource type="Texture2D" uid="uid://cqb678t5nfm3x" path="res://Assets/ellen/frame_79_delay-0.03s.png" id="90_c55bn"]
[ext_resource type="Texture2D" uid="uid://dplt11jq5duab" path="res://Assets/ellen/frame_80_delay-0.03s.png" id="91_ywrnm"]
[ext_resource type="Texture2D" uid="uid://dk32rvrwnh503" path="res://Assets/ellen/frame_81_delay-0.03s.png" id="92_xhs2d"]
[ext_resource type="Texture2D" uid="uid://btstrsil3m0fl" path="res://Assets/ellen/frame_82_delay-0.03s.png" id="93_n2hlt"]
[ext_resource type="Texture2D" uid="uid://b6f6yijr6a2nu" path="res://Assets/ellen/frame_83_delay-0.03s.png" id="94_pswh8"]
[ext_resource type="Texture2D" uid="uid://dpe3fbvwc6k68" path="res://Assets/ellen/frame_84_delay-0.03s.png" id="95_jnii0"]
[ext_resource type="Texture2D" uid="uid://desy27ds8baxu" path="res://Assets/ellen/frame_85_delay-0.03s.png" id="96_dg8o5"]
[ext_resource type="Texture2D" uid="uid://gdhdhcsvqnb2" path="res://Assets/ellen/frame_86_delay-0.03s.png" id="97_47ksg"]
[ext_resource type="Texture2D" uid="uid://chhq3u6071d7u" path="res://Assets/ellen/frame_87_delay-0.03s.png" id="98_3k4f1"]
[ext_resource type="Texture2D" uid="uid://2cjwgei1ays3" path="res://Assets/ellen/frame_88_delay-0.03s.png" id="99_qq2ds"]
[ext_resource type="Texture2D" uid="uid://buwh4dc5ur573" path="res://Assets/ellen/frame_89_delay-0.03s.png" id="100_augvs"]
[ext_resource type="Texture2D" uid="uid://bm38g0c8ct4au" path="res://Assets/ellen/frame_01_delay-0.03s.png" id="101_i0ak8"]
[ext_resource type="Texture2D" uid="uid://c5lt563gjt7u4" path="res://Assets/ellen/frame_02_delay-0.03s.png" id="102_k6r1v"]
[ext_resource type="Texture2D" uid="uid://c1ko6t2q8j5c8" path="res://Assets/ellen/frame_03_delay-0.03s.png" id="103_woe8j"]
[ext_resource type="AudioStream" uid="uid://cxs8uqsrpupm6" path="res://Assets/sound/bermaintebakhuruf.wav" id="104_my585"]
[ext_resource type="Texture2D" uid="uid://cdwye36lplfka" path="res://Assets/ellen/frame_04_delay-0.03s.png" id="104_r58u0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0sjl6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_fk6ka")
}, {
"duration": 1.0,
"texture": ExtResource("16_ay2rd")
}, {
"duration": 1.0,
"texture": ExtResource("17_6skei")
}, {
"duration": 1.0,
"texture": ExtResource("18_7okvx")
}, {
"duration": 1.0,
"texture": ExtResource("19_3n7bu")
}, {
"duration": 1.0,
"texture": ExtResource("20_m2ptn")
}, {
"duration": 1.0,
"texture": ExtResource("21_teerv")
}, {
"duration": 1.0,
"texture": ExtResource("22_1yarx")
}, {
"duration": 1.0,
"texture": ExtResource("23_i23oa")
}, {
"duration": 1.0,
"texture": ExtResource("24_uyy3f")
}, {
"duration": 1.0,
"texture": ExtResource("25_v7ivo")
}, {
"duration": 1.0,
"texture": ExtResource("26_qmqat")
}, {
"duration": 1.0,
"texture": ExtResource("27_4k5vr")
}, {
"duration": 1.0,
"texture": ExtResource("28_4pmf6")
}, {
"duration": 1.0,
"texture": ExtResource("29_l7i1d")
}, {
"duration": 1.0,
"texture": ExtResource("30_aqky3")
}, {
"duration": 1.0,
"texture": ExtResource("31_lq00s")
}, {
"duration": 1.0,
"texture": ExtResource("32_wda2k")
}, {
"duration": 1.0,
"texture": ExtResource("33_xiwu7")
}, {
"duration": 1.0,
"texture": ExtResource("34_uxibr")
}, {
"duration": 1.0,
"texture": ExtResource("35_bahn4")
}, {
"duration": 1.0,
"texture": ExtResource("36_jjdd5")
}, {
"duration": 1.0,
"texture": ExtResource("37_tkse5")
}, {
"duration": 1.0,
"texture": ExtResource("38_56m6w")
}, {
"duration": 1.0,
"texture": ExtResource("39_p1v53")
}, {
"duration": 1.0,
"texture": ExtResource("40_uc10o")
}, {
"duration": 1.0,
"texture": ExtResource("41_o6e33")
}, {
"duration": 1.0,
"texture": ExtResource("42_uklkh")
}, {
"duration": 1.0,
"texture": ExtResource("43_8pn22")
}, {
"duration": 1.0,
"texture": ExtResource("44_o2rty")
}, {
"duration": 1.0,
"texture": ExtResource("45_gxn5o")
}, {
"duration": 1.0,
"texture": ExtResource("46_n3bbs")
}, {
"duration": 1.0,
"texture": ExtResource("47_vrmgo")
}, {
"duration": 1.0,
"texture": ExtResource("48_axb4m")
}, {
"duration": 1.0,
"texture": ExtResource("49_cjp84")
}, {
"duration": 1.0,
"texture": ExtResource("50_610r4")
}, {
"duration": 1.0,
"texture": ExtResource("51_2wsbj")
}, {
"duration": 1.0,
"texture": ExtResource("52_mpml3")
}, {
"duration": 1.0,
"texture": ExtResource("53_2as2a")
}, {
"duration": 1.0,
"texture": ExtResource("54_f2qoy")
}, {
"duration": 1.0,
"texture": ExtResource("55_pwjag")
}, {
"duration": 1.0,
"texture": ExtResource("56_nc88k")
}, {
"duration": 1.0,
"texture": ExtResource("57_30gc7")
}, {
"duration": 1.0,
"texture": ExtResource("58_bt2sq")
}, {
"duration": 1.0,
"texture": ExtResource("59_ql6ph")
}, {
"duration": 1.0,
"texture": ExtResource("60_mq6g2")
}, {
"duration": 1.0,
"texture": ExtResource("61_sbd4q")
}, {
"duration": 1.0,
"texture": ExtResource("62_3cben")
}, {
"duration": 1.0,
"texture": ExtResource("63_yy014")
}, {
"duration": 1.0,
"texture": ExtResource("64_66342")
}, {
"duration": 1.0,
"texture": ExtResource("65_euo2g")
}, {
"duration": 1.0,
"texture": ExtResource("66_53cul")
}, {
"duration": 1.0,
"texture": ExtResource("67_4tdu4")
}, {
"duration": 1.0,
"texture": ExtResource("68_aerds")
}, {
"duration": 1.0,
"texture": ExtResource("69_qinl6")
}, {
"duration": 1.0,
"texture": ExtResource("70_ncbwu")
}, {
"duration": 1.0,
"texture": ExtResource("71_pauoj")
}, {
"duration": 1.0,
"texture": ExtResource("72_n8gac")
}, {
"duration": 1.0,
"texture": ExtResource("73_jgeh3")
}, {
"duration": 1.0,
"texture": ExtResource("74_y8v8l")
}, {
"duration": 1.0,
"texture": ExtResource("75_tw2wo")
}, {
"duration": 1.0,
"texture": ExtResource("76_nj71j")
}, {
"duration": 1.0,
"texture": ExtResource("77_uy4qy")
}, {
"duration": 1.0,
"texture": ExtResource("78_3e6np")
}, {
"duration": 1.0,
"texture": ExtResource("79_fkd5m")
}, {
"duration": 1.0,
"texture": ExtResource("80_iq1si")
}, {
"duration": 1.0,
"texture": ExtResource("81_m3ncn")
}, {
"duration": 1.0,
"texture": ExtResource("82_kyfv2")
}, {
"duration": 1.0,
"texture": ExtResource("83_l22hs")
}, {
"duration": 1.0,
"texture": ExtResource("84_5j0on")
}, {
"duration": 1.0,
"texture": ExtResource("85_dlfvf")
}, {
"duration": 1.0,
"texture": ExtResource("86_bbpop")
}, {
"duration": 1.0,
"texture": ExtResource("87_iclsf")
}, {
"duration": 1.0,
"texture": ExtResource("88_hr0bg")
}, {
"duration": 1.0,
"texture": ExtResource("89_bp51f")
}, {
"duration": 1.0,
"texture": ExtResource("90_c55bn")
}, {
"duration": 1.0,
"texture": ExtResource("91_ywrnm")
}, {
"duration": 1.0,
"texture": ExtResource("92_xhs2d")
}, {
"duration": 1.0,
"texture": ExtResource("93_n2hlt")
}, {
"duration": 1.0,
"texture": ExtResource("94_pswh8")
}, {
"duration": 1.0,
"texture": ExtResource("95_jnii0")
}, {
"duration": 1.0,
"texture": ExtResource("96_dg8o5")
}, {
"duration": 1.0,
"texture": ExtResource("97_47ksg")
}, {
"duration": 1.0,
"texture": ExtResource("98_3k4f1")
}, {
"duration": 1.0,
"texture": ExtResource("99_qq2ds")
}, {
"duration": 1.0,
"texture": ExtResource("100_augvs")
}, {
"duration": 1.0,
"texture": ExtResource("101_i0ak8")
}, {
"duration": 1.0,
"texture": ExtResource("102_k6r1v")
}, {
"duration": 1.0,
"texture": ExtResource("103_woe8j")
}, {
"duration": 1.0,
"texture": ExtResource("104_r58u0")
}],
"loop": true,
"name": &"default",
"speed": 28.0
}]

[sub_resource type="Animation" id="Animation_oyv6m"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uh8m6"]
_data = {
"idle": SubResource("Animation_oyv6m")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_u5h7j")
metadata/_edit_horizontal_guides_ = [81.0]
metadata/_edit_vertical_guides_ = []

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w8dcc")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_opgsu")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer/GUI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/GUI/MarginContainer/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0.007, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.75
theme_override_colors/font_outline_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/normal_font = ExtResource("3_f6fus")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Level 1[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HeartContainer" parent="CanvasLayer/GUI/MarginContainer/HBoxContainer" instance=ExtResource("6_8telj")]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_vertical = 1
theme_override_constants/separation = 5

[node name="Kembali" type="TextureButton" parent="CanvasLayer/GUI"]
layout_mode = 0
offset_left = 29.0
offset_top = 18.0
offset_right = 132.0
offset_bottom = 126.0
texture_normal = ExtResource("4_h8qy6")
texture_pressed = ExtResource("5_gk0hn")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Panel3" type="Panel" parent="CanvasLayer/GUI"]
layout_mode = 0
offset_left = 40.0
offset_top = 141.0
offset_right = 270.0
offset_bottom = 253.0
theme = ExtResource("8_j7r2o")

[node name="Scorelabel" type="RichTextLabel" parent="CanvasLayer/GUI/Panel3"]
clip_contents = false
layout_mode = 2
offset_left = 138.0
offset_top = 32.0
offset_right = 215.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_constants/outline_size = 31
theme_override_fonts/normal_font = ExtResource("9_h2173")
theme_override_font_sizes/normal_font_size = 75
text = "0"
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GUI/Panel3"]
layout_mode = 2
offset_left = 14.0
offset_top = 15.0
offset_right = 101.0
offset_bottom = 100.0
texture = ExtResource("10_fk8jn")
expand_mode = 1
stretch_mode = 5

[node name="Panel2" type="Panel" parent="CanvasLayer/GUI"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 42.0
offset_top = 135.0
offset_right = 290.0
offset_bottom = 259.0

[node name="Scorelabel" type="RichTextLabel" parent="CanvasLayer/GUI/Panel2"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = 43.0
offset_right = -18.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_constants/outline_size = 31
theme_override_fonts/normal_font = ExtResource("9_h2173")
theme_override_font_sizes/normal_font_size = 75
text = "0"
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GUI/Panel2"]
layout_mode = 0
offset_left = 18.0
offset_top = 13.0
offset_right = 116.0
offset_bottom = 111.0
texture = ExtResource("10_fk8jn")
expand_mode = 1

[node name="ContentHuruf" parent="CanvasLayer" instance=ExtResource("13_k4775")]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = -66.0
offset_top = 278.0
offset_right = 309.0
offset_bottom = 742.0
texture = ExtResource("12_co2wi")
expand_mode = 1
stretch_mode = 4
flip_h = true

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -191.0
offset_right = 212.0
grow_vertical = 0

[node name="Karakter" type="CharacterBody2D" parent="CanvasLayer/Control"]
scale = Vector2(1.9449, 0.905532)
motion_mode = 1

[node name="Sprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Control/Karakter"]
position = Vector2(102.96, 9.38662)
scale = Vector2(0.614325, 1.2669)
sprite_frames = SubResource("SpriteFrames_0sjl6")
autoplay = "default"
frame_progress = 0.419181

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Karakter"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_uh8m6")
}

[node name="Panel" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 27.0
offset_top = -237.0
offset_right = 624.0
offset_bottom = 142.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("12_tlsxu")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("104_my585")
pitch_scale = 1.34

[connection signal="pressed" from="CanvasLayer/GUI/Kembali" to="." method="_on_kembali_pressed"]
